--- a/web/package.json
+++ b/web/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "build": "next build",
     "check": "next lint && tsc --noEmit",
-    "dev": "dotenv -f ../.env -- next dev --turbo",
-    "scan": "next dev & npx react-scan@latest localhost:3000",
+    "dev": "dotenv -f ../.env -- next dev --turbo -p 13000",
+    "scan": "next dev & npx react-scan@latest localhost:13000",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
-    "start": "next start",
+    "start": "next start -p 13000",
     "typecheck": "tsc --noEmit",
     "test": "jest --watch",
     "test:run": "jest",
